added title and Div proyects

--- a/index.html
+++ b/index.html
@@ -47,6 +47,11 @@
                 </table>
             </div>
        </section>
+       <h5 id="servicesTitle">SERVICES</h5>
+       <hr>
+       <section class="proyects">
+
+       </section>
     </main>
 </body>
 </html>
