--- a/index.html
+++ b/index.html
@@ -84,6 +84,20 @@
                 <p></p>
             </div>
        </section>
+      
     </main>
+    <footer>
+        <div>
+            <h3>Contact</h3>
+            <p>miguelgn145@gmail.com</p>
+        </div>
+       
+        <div>
+            <h3>Links</h3>
+            <a href=""><i class="fa-brands fa-square-instagram fa-xl" style="color: #ffffff;"></i></a>
+            <a href=""><i class="fa-brands fa-square-twitter fa-xl" style="color: #ffffff;"></i></a>
+            <a href=""><i class="fa-brands fa-square-github fa-xl" style="color: #ffffff;"></i></a>
+        </div>
+    </footer>
 </body>
 </html>
