--- a/pages/desings.html
+++ b/pages/desings.html
@@ -3,43 +3,74 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/2384174807.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../css/desings.css">
-    <title>Desings</title>
+    <title>Web Desings</title>
 </head>
 <body>
     <main>
 
-        <h1>WEB DESINGS</h1>
+        <button onclick="history.back()" aria-label="Go back">
+            <i class="fa-solid fa-arrow-left fa-2xl"></i>
+            BACK
+        </button>
+        
 
-        <section>
-            <div>
-                <h3></h3>
-                <i class="fa-solid fa-arrow-right fa-xl" style="color: #ffffff;"></i>
-            </div>
-            <div>
-                <h3></h3>
-                <i class="fa-solid fa-arrow-right fa-xl" style="color: #ffffff;"></i>
-            </div>
-            <div>
-                <h3></h3>
-                <i class="fa-solid fa-arrow-right fa-xl" style="color: #ffffff;"></i>
-            </div>
-            <div>
-                <h3></h3>
-                <i class="fa-solid fa-arrow-right fa-xl" style="color: #ffffff;"></i>
-            </div>
-            <div>
-                <h3></h3>
-                <i class="fa-solid fa-arrow-right fa-xl" style="color: #ffffff;"></i>
-            </div>
-            <div>
-                <h3></h3>
-                <i class="fa-solid fa-arrow-right fa-xl" style="color: #ffffff;"></i>
-            </div>
+        <h1>WEB DESINGS</h1>
+        <section class="containerDesings">
+            <a href="">
+                <div>
+                    <h3></h3>
+                    <i class="fa-solid fa-arrow-right fa-xl" style="color: #ffffff;"></i>
+                </div>
+            </a>
+            <a href="">
+                <div>
+                    <h3></h3>
+                    <i class="fa-solid fa-arrow-right fa-xl" style="color: #ffffff;"></i>
+                </div>
+            </a>
+            <a href="">
+                <div>
+                    <h3></h3>
+                    <i class="fa-solid fa-arrow-right fa-xl" style="color: #ffffff;"></i>
+                </div>
+            </a>
+            <a href="">
+                <div>
+                    <h3></h3>
+                    <i class="fa-solid fa-arrow-right fa-xl" style="color: #ffffff;"></i>
+                </div>
+            </a>
+            <a href="">
+                <div>
+                    <h3></h3>
+                    <i class="fa-solid fa-arrow-right fa-xl" style="color: #ffffff;"></i>
+                </div>
+            </a>
+            <a href="">
+                <div>
+                    <h3></h3>
+                    <i class="fa-solid fa-arrow-right fa-xl" style="color: #ffffff;"></i>
+                </div>
+            </a>
+
         </section>
     </main>
-    <footer>
-
-    </footer>
+    <!-- <footer>
+        <div>
+            <h3>Contact</h3>
+            <p>miguelgn145@gmail.com</p>
+        </div>
+        <div>
+            <h3>Links</h3>
+            <a href=""><i class="fa-brands fa-square-instagram fa-xl" style="color: #ffffff;"></i></a>
+            <a href=""><i class="fa-brands fa-square-twitter fa-xl" style="color: #ffffff;"></i></a>
+            <a href=""><i class="fa-brands fa-square-github fa-xl" style="color: #ffffff;"></i></a>
+        </div>
+    </footer> -->
 </body>
 </html>
