added fotter to desings page

--- a/pages/desings.html
+++ b/pages/desings.html
@@ -60,7 +60,7 @@
 
         </section>
     </main>
-    <!-- <footer>
+    <footer>
         <div>
             <h3>Contact</h3>
             <p>miguelgn145@gmail.com</p>
@@ -71,6 +71,6 @@
             <a href=""><i class="fa-brands fa-square-twitter fa-xl" style="color: #ffffff;"></i></a>
             <a href=""><i class="fa-brands fa-square-github fa-xl" style="color: #ffffff;"></i></a>
         </div>
-    </footer> -->
+    </footer>
 </body>
 </html>
