--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     <p>Information about my knownledges as developer.</p>
                 </div>
             </a>
-            <a href="./pages/projects.html">
+            <a href="./pages/favWebsites.html">
                 <div>
                     <i class="fa-solid fa-web-awesome fa-xl" style="color: #ffffff;"></i>
                     <h4>Fav websites</h4>
