--- a/pages/desings/diseñoChica/index.html
+++ b/pages/desings/diseñoChica/index.html
@@ -13,20 +13,20 @@
        <div class="f2"></div>
        <div class="f4"></div>
        <div class="f3">
-            <h1>TITLE 1</h1> 
+            <h1>COOL TITLE 1</h1> 
        </div>
        <div class="f5">
-            <h2>TITÑE 2</h2>
+            <h2>TITLE 2</h2>
        </div>
        <div class="f6"></div>
        <div class="f7"></div>
        <div class="f8"></div>
        <div class="f9">
-            <h3>Diseño Interfaces Web</h3> 
+            <h3>GREAT WEB DESING</h3> 
        </div>
        <div class="f10"></div>
        <div class="f11">
-            <h3>Tema 7</h3> 
+            <h3>STYLE</h3> 
        </div>
        <div class="f12"></div>
        <div class="f13"></div>
@@ -35,7 +35,7 @@
        <div class="f16"></div>
        <div class="f17"></div>
        <div class="f18">
-            <h3>14 filas,5 columnas</h3> 
+            <h3>14 rows,5 columns</h3> 
        </div>
     </section>
 </body>
