updated desings file and unesco folder

--- a/pages/desings.html
+++ b/pages/desings.html
@@ -21,39 +21,63 @@
 
         <h1>WEB DESINGS</h1>
         <section class="containerDesings">
-            <a href="">
+            <a href="./desings/CartasBarajaInglesa/index.html">
                 <div>
-                    <h3></h3>
+                    <h3>Cards</h3>
                     <i class="fa-solid fa-arrow-right fa-xl" style="color: #ffffff;"></i>
                 </div>
             </a>
-            <a href="">
+            <a href="./desings/dados/index.html">
                 <div>
-                    <h3></h3>
+                    <h3>Dices</h3>
                     <i class="fa-solid fa-arrow-right fa-xl" style="color: #ffffff;"></i>
                 </div>
             </a>
-            <a href="">
+            <a href="./desings/informatica/index.html">
                 <div>
-                    <h3></h3>
+                    <h3>Informatic</h3>
                     <i class="fa-solid fa-arrow-right fa-xl" style="color: #ffffff;"></i>
                 </div>
             </a>
-            <a href="">
+            <a href="./desings/Galeria de Imagenes/index.html">
                 <div>
-                    <h3></h3>
+                    <h3>Gallery of different places</h3>
                     <i class="fa-solid fa-arrow-right fa-xl" style="color: #ffffff;"></i>
                 </div>
             </a>
-            <a href="">
+            <a href="./desings/roads/5.4.html">
                 <div>
-                    <h3></h3>
+                    <h3>Roads</h3>
                     <i class="fa-solid fa-arrow-right fa-xl" style="color: #ffffff;"></i>
                 </div>
             </a>
-            <a href="">
+            <a href="./desings/pinguinos/index.html">
                 <div>
-                    <h3></h3>
+                    <h3>Penguins</h3>
+                    <i class="fa-solid fa-arrow-right fa-xl" style="color: #ffffff;"></i>
+                </div>
+            </a>
+            <a href="./desings/sombrillas/index.html">
+                <div>
+                    <h3>Sunshades</h3>
+                    <i class="fa-solid fa-arrow-right fa-xl" style="color: #ffffff;"></i>
+                </div>
+            </a>
+            <a href="./desings/contenedorColores/colors.html">
+                <div>
+                    <h3>Colors</h3>
+                    <i class="fa-solid fa-arrow-right fa-xl" style="color: #ffffff;"></i>
+                </div>
+            </a>
+            <a href="./desings/diseñoChica/index.html">
+                <div>
+                    <h3>Cool desing(desktop)</h3>
+                    <i class="fa-solid fa-arrow-right fa-xl" style="color: #ffffff;"></i>
+                </div>
+            </a>
+            <a href="./desings/unesco/index.html">
+                <div>
+                    <h3>UNESCO</h3>
                     <i class="fa-solid fa-arrow-right fa-xl" style="color: #ffffff;"></i>
                 </div>
             </a>
