updated informatica, desings and sombrillas

--- a/pages/desings.html
+++ b/pages/desings.html
@@ -65,13 +65,13 @@
             </a>
             <a href="./desings/contenedorColores/colors.html">
                 <div>
-                    <h3>Colors</h3>
+                    <h3>Colors(desktop)</h3>
                     <i class="fa-solid fa-arrow-right fa-xl" style="color: #ffffff;"></i>
                 </div>
             </a>
             <a href="./desings/diseñoChica/index.html">
                 <div>
-                    <h3>Cool desing(desktop)</h3>
+                    <h3>Cool desing</h3>
                     <i class="fa-solid fa-arrow-right fa-xl" style="color: #ffffff;"></i>
                 </div>
             </a>
