--- a/pages/favWebsites.html
+++ b/pages/favWebsites.html
@@ -21,39 +21,39 @@
 
         <h1>FAV WEBSITES</h1>
         <section class="containerDesings">
-            <a href="">
+            <a href="https://developer.mozilla.org/en-US/">
                 <div>
-                    <h3></h3>
+                    <h3>MDN Mozilla</h3>
                     <i class="fa-solid fa-arrow-right fa-xl" style="color: #ffffff;"></i>
                 </div>
             </a>
-            <a href="">
+            <a href="https://www.w3schools.com/">
                 <div>
-                    <h3></h3>
+                    <h3>W3school</h3>
                     <i class="fa-solid fa-arrow-right fa-xl" style="color: #ffffff;"></i>
                 </div>
             </a>
-            <a href="">
+            <a href="https://rapidapi.com/hub">
                 <div>
-                    <h3></h3>
+                    <h3>API RAPID</h3>
                     <i class="fa-solid fa-arrow-right fa-xl" style="color: #ffffff;"></i>
                 </div>
             </a>
-            <a href="">
+            <a href="https://www.sitepoint.com/">
                 <div>
-                    <h3></h3>
+                    <h3>Sitepoint</h3>
                     <i class="fa-solid fa-arrow-right fa-xl" style="color: #ffffff;"></i>
                 </div>
             </a>
-            <a href="">
+            <a href="https://www.codeproject.com/?cat=1">
                 <div>
-                    <h3></h3>
+                    <h3>Code Project</h3>
                     <i class="fa-solid fa-arrow-right fa-xl" style="color: #ffffff;"></i>
                 </div>
             </a>
-            <a href="">
+            <a href="https://github.com/">
                 <div>
-                    <h3></h3>
+                    <h3>Github</h3>
                     <i class="fa-solid fa-arrow-right fa-xl" style="color: #ffffff;"></i>
                 </div>
             </a>
