--- a/pages/projects.html
+++ b/pages/projects.html
@@ -23,41 +23,28 @@
         <section class="containerDesings">
             <a href="">
                 <div>
-                    <h3></h3>
+                    <h3>Blog of notes</h3>
                     <i class="fa-solid fa-arrow-right fa-xl" style="color: #ffffff;"></i>
                 </div>
             </a>
             <a href="">
                 <div>
-                    <h3></h3>
+                    <h3>Vegan shop</h3>
                     <i class="fa-solid fa-arrow-right fa-xl" style="color: #ffffff;"></i>
                 </div>
             </a>
             <a href="">
                 <div>
-                    <h3></h3>
+                    <h3>Shop of shops</h3>
                     <i class="fa-solid fa-arrow-right fa-xl" style="color: #ffffff;"></i>
                 </div>
             </a>
             <a href="">
                 <div>
-                    <h3></h3>
+                    <h3>Pokeworld</h3>
                     <i class="fa-solid fa-arrow-right fa-xl" style="color: #ffffff;"></i>
                 </div>
             </a>
-            <a href="">
-                <div>
-                    <h3></h3>
-                    <i class="fa-solid fa-arrow-right fa-xl" style="color: #ffffff;"></i>
-                </div>
-            </a>
-            <a href="">
-                <div>
-                    <h3></h3>
-                    <i class="fa-solid fa-arrow-right fa-xl" style="color: #ffffff;"></i>
-                </div>
-            </a>
-
         </section>
     </main>
     <footer>
