added miguellwallapop and vegan shop files

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -21,19 +21,19 @@
 
         <h1>WEB PROJECTS</h1>
         <section class="containerDesings">
-            <a href="">
+            <a href="./projects/BlogNotes.html">
                 <div>
                     <h3>Blog of notes</h3>
                     <i class="fa-solid fa-arrow-right fa-xl" style="color: #ffffff;"></i>
                 </div>
             </a>
-            <a href="">
+            <a href="./projects/veganShop.html">
                 <div>
                     <h3>Vegan shop</h3>
                     <i class="fa-solid fa-arrow-right fa-xl" style="color: #ffffff;"></i>
                 </div>
             </a>
-            <a href="">
+            <a href="./projects/miguelWallapop.html">
                 <div>
                     <h3>Shop of shops</h3>
                     <i class="fa-solid fa-arrow-right fa-xl" style="color: #ffffff;"></i>
