updated miguelwallapop file

--- a/pages/projects/miguelWallapop.html
+++ b/pages/projects/miguelWallapop.html
@@ -47,6 +47,11 @@
             <img src="../../assets/img/Captura de pantalla (768).png" alt="blogNotas">
             <p>This is the page where the user will be able to view the products and add them to the shopping cart to place the order later..</p>
         </div>
+
+        <div>
+            <img src="../../assets/img/Captura de pantalla (774).png" alt="blogNotas">
+            <p>Mobile vesion</p>
+        </div>
     
 
     </section>
