--- a/pages/projects.html
+++ b/pages/projects.html
@@ -39,7 +39,7 @@
                     <i class="fa-solid fa-arrow-right fa-xl" style="color: #ffffff;"></i>
                 </div>
             </a>
-            <a href="">
+            <a href="./projects/pokeworld.html">
                 <div>
                     <h3>Pokeworld</h3>
                     <i class="fa-solid fa-arrow-right fa-xl" style="color: #ffffff;"></i>
