--- a/pages/projects/pokeworld.html
+++ b/pages/projects/pokeworld.html
@@ -132,6 +132,11 @@
             <p>This page the user will can edit/delete his/her comments. </p>
         </div>
 
+        <div>
+            <img src="../../assets/img/database.png" alt="blogNotas">
+            <p>DATABASE </p>
+        </div>
+
 
 
 
