added instagram king

--- a/pages/projects/veganShop.html
+++ b/pages/projects/veganShop.html
@@ -58,7 +58,7 @@
         </div>
         <div>
             <h3>Links</h3>
-            <a href=""><i class="fa-brands fa-square-instagram fa-xl" style="color: #ffffff;"></i></a>
+            <a href="https://www.instagram.com/miguek97/?next=%2F"><i class="fa-brands fa-square-instagram fa-xl" style="color: #ffffff;"></i></a>
             <a href=""><i class="fa-brands fa-square-twitter fa-xl" style="color: #ffffff;"></i></a>
             <a href=""><i class="fa-brands fa-square-github fa-xl" style="color: #ffffff;"></i></a>
         </div>
