--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
            <h3>Hi, <span class="name">I am Miguel</span></h3>
            <p>I am fullstack developer. I can provide clean code and pixel perfect desing.Also I am learning new tecnoplogies like new IAS,frameworks,etc...</p>
             <div>
-                <a href=""><i class="fa-brands fa-square-instagram fa-xl" style="color: #ffffff;"></i></a>
+                <a href="https://www.instagram.com/miguek97/?next=%2F"><i class="fa-brands fa-square-instagram fa-xl" style="color: #ffffff;"></i></a>
                 <a href=""><i class="fa-brands fa-square-twitter fa-xl" style="color: #ffffff;"></i></a>
                 <a href=""><i class="fa-brands fa-square-github fa-xl" style="color: #ffffff;"></i></a>
             </div>
@@ -96,7 +96,7 @@
         </div>
         <div>
             <h3>Links</h3>
-            <a href=""><i class="fa-brands fa-square-instagram fa-xl" style="color: #ffffff;"></i></a>
+            <a href="https://www.instagram.com/miguek97/?next=%2F"><i class="fa-brands fa-square-instagram fa-xl" style="color: #ffffff;"></i></a>
             <a href=""><i class="fa-brands fa-square-twitter fa-xl" style="color: #ffffff;"></i></a>
             <a href=""><i class="fa-brands fa-square-github fa-xl" style="color: #ffffff;"></i></a>
         </div>
