--- a/pages/projects/pokeworld.html
+++ b/pages/projects/pokeworld.html
@@ -152,7 +152,7 @@
             <h3>Links</h3>
             <a href="https://www.instagram.com/miguek97/?next=%2F"><i class="fa-brands fa-square-instagram fa-xl" style="color: #ffffff;"></i></a>
             <a href=""><i class="fa-brands fa-square-twitter fa-xl" style="color: #ffffff;"></i></a>
-            <a href=""><i class="fa-brands fa-square-github fa-xl" style="color: #ffffff;"></i></a>
+            <a href="https://github.com/miguek145"><i class="fa-brands fa-square-github fa-xl" style="color: #ffffff;"></i></a>
         </div>
     </footer>
 </body>
