added row icon to buttons

--- a/index.html
+++ b/index.html
@@ -57,19 +57,20 @@
        <h5 id="servicesTitle">SERVICES</h5>
        <hr>
        <section class="projects">
-            <a href="./pages/desings.html">
-                
-                    <div>
-                        <i class="fa-solid fa-pen-nib fa-xl" style="color: #ffffff;"></i>
-                        <h4>Good desings</h4>
-                        <p>Responsive desings with animations and transactions</p>
-                    </div>
+            <a href="./pages/desings.html">             
+                <div>
+                    <i class="fa-solid fa-pen-nib fa-xl" style="color: #ffffff;"></i>
+                    <h4>Good desings</h4>
+                    <p>Responsive desings with animations and transactions</p>
+                    <i class="fa-solid fa-arrow-right row"></i>
+                </div>
             </a>
             <a href="./pages/projects.html">
                 <div>
                     <i class="fa-solid fa-diagram-project fa-xl" style="color: #ffffff;"></i>
                     <h4>Projects</h4>
                     <p>Shopping´s websites, forum and note app</p>
+                    <i class="fa-solid fa-arrow-right row"></i>
                 </div>
             </a>
 
@@ -78,6 +79,7 @@
                     <i class="fa-solid fa-book fa-xl" style="color: #ffffff;"></i>
                     <h4>Knownledges</h4>
                     <p>Information about my knownledges as developer.</p>
+                    <i class="fa-solid fa-arrow-right row"></i>
                 </div>
             </a>
             <a href="./pages/favWebsites.html">
@@ -85,6 +87,7 @@
                     <i class="fa-solid fa-web-awesome fa-xl" style="color: #ffffff;"></i>
                     <h4>Fav websites</h4>
                     <p>Links about websites for web developers</p>
+                    <i class="fa-solid fa-arrow-right row"></i>
                 </div>
             </a>
        </section>
