--- a/pages/projects/pokeworld.html
+++ b/pages/projects/pokeworld.html
@@ -51,6 +51,9 @@
             <img src="../../assets/img/Captura de pantalla (781).png" alt="blogNotas">
         </div>
         <div>
+            <img src="../../assets/img/grafoVertical.png" alt="blogNotas">
+        </div>
+        <div>
             <img src="../../assets/img/Captura de pantalla (783).png" alt="blogNotas">
             <p>This is the LOGIN page.</p>
         </div>
